Completed Basic Routing at #24 https://www.youtube.com/watch?v=yymtGNGyhuM&list=PL8p2I9GklV45JZerGMvw5JVxPSxCg8VPv&index=24

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-Routing
+Routing Demo:
+<br>
+<a routerLink="user">user</a>
+<br>
+<a routerLink="admin">admin</a>
+
+<router-outlet></router-outlet>
