ng g c page-not-found

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,7 @@ Routing Demo:
 <a routerLink="user">user</a>
 <br>
 <a routerLink="admin">admin</a>
+<br>
+<a routerLink="about">about</a>
 
 <router-outlet></router-outlet>
