interactive with Service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@ Routing Demo:
 <a routerLink="admin">admin</a>
 <br>
 <a routerLink="about">about</a>
-
+<h2>{{ name }}</h2>
 <h1 appCustomStyle>adsafads</h1>
 
 <router-outlet></router-outlet>
