use HttpClient to do getHttpData in Service (part2)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,5 +7,13 @@ Routing Demo:
 <a routerLink="about">about</a>
 <h2>{{ name }}</h2>
 <h1 appCustomStyle>adsafads</h1>
-
+<table><tr>
+  <td>Id</td>
+  <td>Title</td>
+  <td>User Id</td>
+</tr><tr *ngFor="let item of data">
+  <td>{{item.id}}</td>
+  <td>{{item.title}}</td>
+  <td>{{item.userId}}</td>
+</tr></table>
 <router-outlet></router-outlet>
